--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,36 @@
 spring.application.name=fastfoodDataEngine
+
+# mysql config
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://192.168.95.102:3306/user_management?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=$000103Fl
+
+# HikariCP ??????????????????????
+# ?????????????????? 10?
+spring.datasource.hikari.maximum-pool-size=20
+# ?????????? 10?
+spring.datasource.hikari.minimum-idle=5
+# ???????????? 30000?
+spring.datasource.hikari.connection-timeout=30000
+# ???????????? 600000?
+spring.datasource.hikari.max-lifetime=600000
+# MyBatis??
+mybatis.mapper-locations=classpath:mappers/*.xml
+
+
+# Dubbo????
+dubbo.application.name=fastfooddataengine
+
+# ???????Zookeeper?
+# dubbo.registry.address=zookeeper://127.0.0.1:2181
+# ?????????????????
+dubbo.registry.address=N/A
+
+# ????
+dubbo.protocol.name=dubbo
+dubbo.protocol.port=20880
+
+# ?????????Dubbo??????????
+dubbo.scan.base-packages=com.asher.fastfooddataengine.service
+
